# openvariant

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  annotation_example.yaml  annotation_template.yaml  gh_test.txt  gh_tester.txt  main.py  pyproject.toml  requirements-docs.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  new-feature.yml  test.yml
.github/workflows/: openvariant_tester.yml
docs/: Makefile  conf.py  contribution_guide.rst  examples.rst  index.rst  installation.rst  references.rst  refs.bib  release_notes.rst  requirements-docs.txt
docs/_static/: example.yml  openvariant.css
docs/examples/: cli_examples.rst  count_examples.rst  find_files.rst  find_files_examples.rst  plugin_examples.rst  tasks_examples.rst  variant_examples.rst
docs/references/: modules.rst  openvariant.annotation.rst  openvariant.find_files.rst  openvariant.plugins.alteration_type.rst  openvariant.plugins.get_AF.rst  openvariant.plugins.rst  openvariant.tasks.rst  openvariant.variant.rst
docs/user_guide/: annotation_structure.rst  cli.rst  getting_started.rst  plugin_system.rst  tasks.rst
examples/: README.md  example_1.py  example_1.yaml  example_2.py  example_2.yaml
examples/cat/: header_in_cat.ipynb
examples/cli/: README.md  introduction_cli.ipynb  main_cli.ipynb  output_cat_cmd.tsv
examples/count_example/: example_2.py
examples/datasets/: README.md
examples/find_files/: find_files_with_directory_path.ipynb  find_files_with_file_path.ipynb
examples/group_by/: simple_group_by.ipynb  where_in_group_by.ipynb
examples/plugin_system/: README.md  plugin_system.ipynb
examples/read_example/: example_1.py
examples/tasks/: cat.ipynb  count.ipynb
examples/variant/: read.ipynb  save.ipynb
openvariant/: __init__.py
openvariant/annotation/: annotation.py  builder.py  config_annotation.py  parser.py  process.py
openvariant/commands/: openvar.py  plugin_command.py
openvariant/config/: config_annotation.py
openvariant/find/: __init__.py  find.py  find_files.py
openvariant/find_files/: __init__.py  find_files.py
openvariant/plugins/: __init__.py  context.py  plugin.py
openvariant/task/: cat.py  count.py  find.py  groupby.py  openvar.py
openvariant/tasks/: __init__.py  cat.py  count.py  groupby.py  plugin.py
openvariant/utils/: format_line.py  utils.py  where.py
openvariant/variant/: __init__.py  variant.py  where.py
plugin/liftover/: __init__.py
plugins/: plugin.py
plugins/alteration_type/: __init__.py  alteration_type.py
plugins/basic/: basic.py
plugins/liftover/: liftover.py
src/annotation/: annotation.py  builder.py  parser.py
src/config/: config_annotation.py
src/finder/: find.py
src/reader/: find.py
src/task/: cat.py  count.py  find.py  groupby.py
src/unify/: parser.py  unify.py
src/utils/: format_line.py  logger.py  where.py
src/variant/: variant.py
test/data/: ex.tsv  example.yaml  example3.yaml  task_test.yaml
test/test_task/: test_cat.py  test_count.py  test_find.py  test_group_by.py
tests/: __init__.py
tests/data/: example.yaml  example_X.yaml  find_files.yaml  meta.bbginfo  task_test.yaml
tests/test_annotation/: test_annotation.py  test_builder.py  test_parser.py  test_process.py
tests/test_command/: test_cat_command.py  test_count_command.py  test_group_by_command.py  test_help_command.py
tests/test_find/: test_find.py
tests/test_task/: test_cat.py  test_count.py  test_find.py  test_group_by.py
tests/test_utils/: test_format_line.py  test_where.py
(+325 files in other folders)
